--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../style.css" />
-    <link rel="stylesheet" href="../css/all.min.css" />
-    <link rel="stylesheet" href="../css/fontawesome.min.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="css/fontawesome.min.css" />
     <title>Document</title>
   </head>
   <body>
@@ -19,10 +19,10 @@
           <label id="close-btn" for="open-close"><i class="fa-solid fa-x"></i></label>
           </li>
           <li class="navbar-link">
-          <a href="./index.html">Works</a>
+          <a href="index.html">Works</a>
           </li>
           <li class="navbar-link">
-          <a href="./blog.html">Blog</a>
+          <a href="./sites/blog.html">Blog</a>
           </li>
           <li class="navbar-link">
           <a href="#">Contact</a>
@@ -50,7 +50,7 @@
               <button id="btn">Download Resume</button>
             </div>
             <div class="img">
-              <img class="img__main" src="../images/circle.png" alt="john" />
+              <img class="img__main" src="images/circle.png" alt="john" />
             </div>
           </div>
         </div>
@@ -92,7 +92,7 @@
       <p class="heading__feature-section">Featured works</p>
       <div class="features">
         <div class="feature">
-          <img class="img__feature" src="../images/Rectangle1.png" alt="" />
+          <img class="img__feature" src="images/Rectangle1.png" alt="" />
           <div class="info__feature">
             <h2>Designing Dashboards</h2>
             <div class="subinfo__feature">
@@ -107,7 +107,7 @@
           </div>
         </div>
         <div class="feature">
-          <img class="img__feature" src="../images/Rectangle2.png" alt="" />
+          <img class="img__feature" src="images/Rectangle2.png" alt="" />
           <div class="info__feature">
             <h2>Vibrant Portraits of 2020</h2>
             <div class="subinfo__feature">
@@ -122,7 +122,7 @@
           </div>
         </div>
         <div class="feature">
-          <img class="img__feature" src="../images/Rectangle3.png" alt="" />
+          <img class="img__feature" src="images/Rectangle3.png" alt="" />
           <div class="info__feature">
             <h2>36 Days of Malayalam type</h2>
             <div class="subinfo__feature">
