--- a/sites/blog.html
+++ b/sites/blog.html
@@ -19,7 +19,7 @@
 	  <label id="close-btn" for="open-close"><i class="fa-solid fa-x"></i></label>
 	  </li>
 	  <li class="navbar-link">
-	  <a href="./index.html">Works</a>
+	  <a href="../index.html">Works</a>
 	  </li>
 	  <li class="navbar-link">
 	  <a id="hover" href="./blog.html">Blog</a>
